Demoed version of iAppreciateNYC

--- a/app/templates/output.html
+++ b/app/templates/output.html
@@ -79,7 +79,7 @@
       <script src="static/js/bootstrap.min.js"></script>
 
        <div call="row">
-       <div class="col-md-6">
+       <div class="col-lg-9">
          <h3>Predicted appreciation for the neighborhood:<br>
          I can haz model?</h3>
         {{ line_chart.render()|safe }}
@@ -96,7 +96,7 @@
             The closest entrance is at {{stair}}</p>
           {{mymap.html}}
 
-          <h2> Bitches be mapping!</h2>
+          <h2> We be mapping!</h2>
 
         </div>
 
