--- a/app/templates/input.html
+++ b/app/templates/input.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>iAppreciate.nyc</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#"><img src="../static/logo_white.png", alt="iAppreciate.nyc"
+            width = 200>
+          </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -57,7 +59,7 @@
     <div class="container">
 
       <div class="starter-template">
-          <h2>Input Page</h2>
+          <h2>Tracing gentrification along the subway since a few days ago.</h2>
       </div>
 
       <div class = "container">
