--- a/app/templates/output.html
+++ b/app/templates/output.html
@@ -43,7 +43,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#"><img src="../static/logo_white.png", alt="iAppreciate.nyc"
+            width = 200>
+          </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -59,9 +61,30 @@
 
     <div class="container">
       <div class="starter-template">
-          <h2>Output Page</h2>
-          <p>Enter some user input</p>
+          <h2></h2>
       </div>
+      <div call="row">
+      <div class="col-lg-8">
+        <h3>Predicted appreciation for the neighborhood:
+        </h3>
+       {{ line_chart.render()|safe }}
+
+      </div>
+      </div>
+
+
+     <div class="container">
+       <div class="starter-template">
+         <h3>Closest subway:</h3>
+         <p class="lead">
+           The nearest subway is {{station}}<br>
+           The closest entrance is at {{stair}}</p>
+         {{mymap.html}}
+
+         <h2> </h2>
+
+       </div>
+
 
       <div class = "container">
 
@@ -78,31 +101,6 @@
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="static/js/bootstrap.min.js"></script>
 
-       <div call="row">
-       <div class="col-lg-9">
-         <h3>Predicted appreciation for the neighborhood:<br>
-         I can haz model?</h3>
-        {{ line_chart.render()|safe }}
-
-       </div>
-       </div>
-
-
-      <div class="container">
-        <div class="starter-template">
-          <h3>Closest subway:</h3>
-          <p class="lead">
-            The nearest subway is {{station}}<br>
-            The closest entrance is at {{stair}}</p>
-          {{mymap.html}}
-
-          <h2> We be mapping!</h2>
-
-        </div>
-
-
-        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="static/js/bootstrap.min.js"></script>
 
 
        </div><!-- /.container -->
