--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>iAppreciate.nyc</title>
+    <title>About iAppreciate.NYC (and Ziggy)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -46,8 +46,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/input">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/input">Home</a></li>
+            <li class="active"><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -55,32 +55,9 @@
     </nav>
 
     <br><br>
-
-    <div class="container">
-
-      <div class="container">
-        <br>
-          <h2>Real estate appreciation trends and predictions along the NYC subway.</h2>
-          <br>
-      </div>
-
-      <div class = "container">
-          <form  action="/output" method="GET">
-              <div class="col-xs-6">
-                <label for="ID">Enter an address or neighborhood
-                  for real estate appreciation trends.</label>
-                <input class="form-control" type="text" id="ID" name='ID' placeholder="e.g. 105 Ainslie St, Brooklyn, NY">
-                <br>
-                <button type="submit" class="btn btn-default btn-lg">How much will this location appreciate?</button>
-              </div>
-          </form>
-        </div>
-
-      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-      <script src="static/js/bootstrap.min.js"></script>
-
-    </div> <!-- /.container-->
-
+<div class="container">
+<h1>About the app. Details coming shortly...</h1>
+</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
