--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>iAppreciate.nyc</title>
+    <title>Contact Ziggy</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -46,41 +46,30 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/input">Home</a></li>
+            <li><a href="/input">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li class="active"><a href="/contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <br><br>
+<div class="container">
+  <div class="page-header">
+   <h1>Zigmund Kermish</h1>
+   <h2>
+     <small>Personal webpage/blog: <a href="http://zkermish.github.com">zkermish.github.com</small>
+     </h2>
 
-    <div class="container">
-
-      <div class="container">
-        <br>
-          <h2>Real estate appreciation trends and predictions along the NYC subway.</h2>
-          <br>
-      </div>
-
-      <div class = "container">
-          <form  action="/output" method="GET">
-              <div class="col-xs-6">
-                <label for="ID">Enter an address or neighborhood
-                  for real estate appreciation trends.</label>
-                <input class="form-control" type="text" id="ID" name='ID' placeholder="e.g. 105 Ainslie St, Brooklyn, NY">
-                <br>
-                <button type="submit" class="btn btn-default btn-lg">How much will this location appreciate?</button>
-              </div>
-          </form>
-        </div>
-
-      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-      <script src="static/js/bootstrap.min.js"></script>
-
-    </div> <!-- /.container-->
-
+   <h2>
+     <small>LinkedIn: <a href="http://linkedin.com/in/zkermish">linkedin.com/in/zkermish</small>
+     </h2>
+  <h2>
+  <small>GitHub: <a href="http://github.com/zkermish">github.com/zkermish</small>
+  </h2>
+ </div>
+</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
