--- a/app/templates/output.html
+++ b/app/templates/output.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="../static/logo_white.png", alt="iAppreciate.nyc"
+          <a class="navbar-brand" href="/input"><img src="../static/logo_white.png", alt="iAppreciate.nyc"
             width = 200>
           </a>
         </div>
@@ -59,12 +59,37 @@
 
     <br><br>
 
+        <div class="container">
+
+          <div class="container">
+            <br>
+              <h2>Real estate appreciation trends and predictions along the NYC subway.</h2>
+              <br>
+          </div>
+
+          <div class = "container">
+              <form  action="/output" method="GET">
+                  <div class="col-xs-6">
+                    <label for="ID">Enter an address or neighborhood
+                      for real estate appreciation trends.</label>
+                    <input class="form-control" type="text" id="ID" name='ID' placeholder="Try another location?">
+                    <br>
+                    <button type="submit" class="btn btn-default btn-lg">How much will this location appreciate?</button>
+                  </div>
+              </form>
+            </div>
+
+          <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+          <script src="static/js/bootstrap.min.js"></script>
+
+        </div> <!-- /.container-->
+
     <div class="container">
       <div class="starter-template">
           <h2></h2>
       </div>
       <div call="row">
-      <div class="col-lg-8">
+      <div class="col-md-8">
         <h3>Predicted appreciation near the {{station}} station:
         </h3>
        {{ line_chart.render()|safe }}
@@ -73,7 +98,7 @@
       </div>
 
 
-     <div class="container">
+     <div class="col-md-4">
        <div class="starter-template">
          <h3>Closest subway:</h3>
          <p class="lead">
@@ -87,18 +112,6 @@
        </div>
 
 
-      <div class = "container">
-
-        <form  action="/output" method="GET">
-          <div class="form-group">
-            <label for="ID">Try another address?:</label>
-            <input type="text" id="ID" name='ID' placeholder="e.g. ">
-          </div>
-          <div>
-            <button type="submit" class="btn btn-default btn-lg">Predict for this address!</button>
-          </div>
-        </form>
-      </div>
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="static/js/bootstrap.min.js"></script>
 
