Added link to slides on about page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -56,9 +56,12 @@
 
     <br><br>
 <div class="container">
-<h1>About the app. Details coming shortly...</h1>
+  <div class="page-header">
+    <h1>How does it work?</h1>
+    <h3>Details about how this website was built can be found in my talk embeded below: </h3>
+    <script async class="speakerdeck-embed" data-id="4a83e2f5902343e993abd957a4d8ac2f" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+  </div>
 </div>
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
