--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -58,7 +58,7 @@
 <div class="container">
   <div class="page-header">
     <h1>How does it work?</h1>
-    <h3>Details about how this website was built can be found in my talk embeded below: </h3>
+    <h3>Details about how this website was built can be found in my talk embedded below: </h3>
     <script async class="speakerdeck-embed" data-id="4a83e2f5902343e993abd957a4d8ac2f" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
   </div>
 </div>
