Moved to google slides embedded in about page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -59,9 +59,8 @@
   <div class="page-header">
     <h1>How does it work?</h1>
     <h3>Details about how this website was built can be found in my talk embedded below: </h3>
-    <script async class="speakerdeck-embed" data-id="4a83e2f5902343e993abd957a4d8ac2f" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+    <iframe src="https://docs.google.com/presentation/d/1yv1qRc1U_FBh-VQySVs_5Bn_uWyAwyBXQXRdqMBhpKg/embed?start=false&loop=false&delayms=30000" frameborder="0" width="683" height="541" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </div>
-</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
