Added link to backup pdf of slides

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -60,6 +60,8 @@
     <h1>How does it work?</h1>
     <h3>Details about how this website was built can be found in my talk embedded below: </h3>
     <iframe src="https://docs.google.com/presentation/d/1yv1qRc1U_FBh-VQySVs_5Bn_uWyAwyBXQXRdqMBhpKg/embed?start=false&loop=false&delayms=30000" frameborder="0" width="683" height="541" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <br>
+    <a href="https://www.dropbox.com/s/7zshik4ousur91x/week%205%20demo.pdf?dl=0">Backup pdf</a>
   </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
